--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1 >Hello World</h1>
+    <h1 >Hello World, we are developers</h1>
     <script  src="js/index.js"></script>
   </body>
 </html>
