--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img id="img" src="img1.jpg" class="img-fluid">
           <div class="heading-content text-center" >
             <h5>Hello I'm</h5>
-            <h1>Exhildah</h1>
+            <h1>Twitter</h1>
             <p>and this my first finalstep</p>
         </div>
       </div>
